--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CnB-UE-nRm">
-                                <rect key="frame" x="16" y="189" width="343" height="458"/>
+                                <rect key="frame" x="16" y="64" width="343" height="583"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="458" id="psq-Yp-lkX"/>
@@ -66,8 +67,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="CnB-UE-nRm" firstAttribute="leading" secondItem="3SU-bP-ZmM" secondAttribute="leading" constant="16" id="2KC-YG-ApP"/>
+                            <constraint firstItem="6tS-Dy-qpp" firstAttribute="top" secondItem="CnB-UE-nRm" secondAttribute="bottom" id="AN3-24-Os8"/>
                             <constraint firstAttribute="trailing" secondItem="CnB-UE-nRm" secondAttribute="trailing" constant="16" id="eNu-ZJ-waU"/>
                             <constraint firstItem="6tS-Dy-qpp" firstAttribute="top" secondItem="CnB-UE-nRm" secondAttribute="bottom" constant="20" id="hUH-WN-50W"/>
+                            <constraint firstItem="CnB-UE-nRm" firstAttribute="top" secondItem="n3n-aR-UVQ" secondAttribute="bottom" id="wBZ-ep-dbr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Temperature" id="iMS-L3-vDv">
@@ -98,51 +101,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="imagePlaceholder-2" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CtR-Mw-2EP">
-                                <rect key="frame" x="58" y="182" width="271" height="187"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePlaceholder-2" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CtR-Mw-2EP">
+                                <rect key="frame" x="58" y="157" width="271" height="162"/>
                             </imageView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" restorationIdentifier="temploader" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="z8B-Km-PjM">
-                                <rect key="frame" x="197" y="252" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" restorationIdentifier="temploader" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="z8B-Km-PjM">
+                                <rect key="frame" x="184" y="228" width="20" height="20"/>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CITY NAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d2S-WT-Crq">
-                                <rect key="frame" x="16" y="106" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CurrentDate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFL-Fu-MkS">
+                                <rect key="frame" x="22" y="354" width="343" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CurrentDate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HFL-Fu-MkS">
-                                <rect key="frame" x="16" y="401" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CurrentTemp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3t2-s3-Ke2">
+                                <rect key="frame" x="17" y="411" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CurrentTemp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3t2-s3-Ke2">
-                                <rect key="frame" x="16" y="430" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7A-hM-QMF">
+                                <rect key="frame" x="28" y="474" width="332" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Main" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7A-hM-QMF">
-                                <rect key="frame" x="27" y="487" width="332" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efc-Lw-4tt">
+                                <rect key="frame" x="37" y="526" width="329" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efc-Lw-4tt">
-                                <rect key="frame" x="30" y="529" width="329" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CITY NAME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d2S-WT-Crq">
+                                <rect key="frame" x="22" y="89" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="V0a-xl-a8E" firstAttribute="top" secondItem="CtR-Mw-2EP" secondAttribute="bottom" constant="348" id="0GK-WZ-zlg"/>
+                            <constraint firstItem="B7A-hM-QMF" firstAttribute="leading" secondItem="SQx-iI-K0F" secondAttribute="leading" constant="28" id="4IL-Hf-7qc"/>
+                            <constraint firstItem="Efc-Lw-4tt" firstAttribute="leading" secondItem="SQx-iI-K0F" secondAttribute="leading" constant="37" id="6kL-KS-pbf"/>
+                            <constraint firstAttribute="trailing" secondItem="HFL-Fu-MkS" secondAttribute="trailing" constant="10" id="7ej-c7-xpg"/>
+                            <constraint firstItem="Efc-Lw-4tt" firstAttribute="top" secondItem="B7A-hM-QMF" secondAttribute="bottom" constant="31.5" id="BnU-OH-D0t"/>
+                            <constraint firstItem="d2S-WT-Crq" firstAttribute="leading" secondItem="SQx-iI-K0F" secondAttribute="leading" constant="22" id="E4d-Ol-iac"/>
+                            <constraint firstItem="B7A-hM-QMF" firstAttribute="top" secondItem="3t2-s3-Ke2" secondAttribute="bottom" constant="42" id="Hdq-nB-NXC"/>
+                            <constraint firstItem="HFL-Fu-MkS" firstAttribute="leading" secondItem="SQx-iI-K0F" secondAttribute="leading" constant="22" id="Iii-a4-aog"/>
+                            <constraint firstItem="d2S-WT-Crq" firstAttribute="top" secondItem="bsN-At-zl3" secondAttribute="bottom" constant="25" id="NZh-pg-eTD"/>
+                            <constraint firstItem="3t2-s3-Ke2" firstAttribute="top" secondItem="HFL-Fu-MkS" secondAttribute="bottom" constant="36.5" id="NgH-uT-jcR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="CtR-Mw-2EP" secondAttribute="trailing" constant="30" id="SXk-kW-7eS"/>
+                            <constraint firstAttribute="trailing" secondItem="d2S-WT-Crq" secondAttribute="trailing" constant="10" id="XhO-u4-WxP"/>
+                            <constraint firstItem="CtR-Mw-2EP" firstAttribute="leading" secondItem="SQx-iI-K0F" secondAttribute="leadingMargin" constant="42" id="Y9Y-v1-PFX"/>
+                            <constraint firstAttribute="trailing" secondItem="B7A-hM-QMF" secondAttribute="trailing" constant="15" id="aen-en-rvG"/>
+                            <constraint firstItem="3t2-s3-Ke2" firstAttribute="leading" secondItem="SQx-iI-K0F" secondAttribute="leading" constant="17" id="c9U-AZ-q6t"/>
+                            <constraint firstAttribute="trailing" secondItem="3t2-s3-Ke2" secondAttribute="trailing" constant="15" id="cob-rC-SU3"/>
+                            <constraint firstItem="z8B-Km-PjM" firstAttribute="top" secondItem="bsN-At-zl3" secondAttribute="bottom" constant="164" id="fYr-g2-lId"/>
+                            <constraint firstItem="HFL-Fu-MkS" firstAttribute="top" secondItem="z8B-Km-PjM" secondAttribute="bottom" constant="106" id="mpb-m2-qnn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="z8B-Km-PjM" secondAttribute="trailing" constant="155" id="mvU-1r-1JN"/>
+                            <constraint firstItem="CtR-Mw-2EP" firstAttribute="top" secondItem="bsN-At-zl3" secondAttribute="bottom" constant="93" id="oA1-hf-H4I"/>
+                            <constraint firstItem="V0a-xl-a8E" firstAttribute="top" secondItem="Efc-Lw-4tt" secondAttribute="bottom" constant="120" id="psP-qX-SBp"/>
+                            <constraint firstAttribute="trailing" secondItem="Efc-Lw-4tt" secondAttribute="trailing" constant="9" id="wvw-HI-xcC"/>
+                            <constraint firstItem="z8B-Km-PjM" firstAttribute="leading" secondItem="SQx-iI-K0F" secondAttribute="leadingMargin" constant="168" id="xLQ-Fy-C3Q"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9gZ-9C-fEL">
                         <barButtonItem key="leftBarButtonItem" systemItem="done" id="Jgc-sk-P96"/>
